feature: Implemented the user's update feature